...
    <Screen
      contentContainerStyle={{ flex: 1 }}
      style={$root}
      preset="fixed"
      safeAreaEdges={["bottom"]}
    >
      <View testID="step" style={$steperContainer}>
        <Text text={`Step ${count}: ${type}`} style={$steper} />
        <View>
          <View style={$closeView}>
            <Icon testID="close" icon="x" style={$icon} onPress={() => navigation.goBack()} />
          </View>
        </View>
      </View>

      <View style={$progressContainer}>
        <View style={[$progress, { width: `${count * 33.33}%` }]} />
...
