...
            inactiveSlideOpacity={1}
            onSnapToItem={(index) => setActiveSlide(index)}
            data={document?.remoteImages}
            renderItem={({ item }) => (
              <FastImage
                style={$slidingImage}
                testID="swipe"
                source={{
                  uri: item,
                  priority: FastImage.priority.normal,
                }}
                resizeMode={FastImage.resizeMode.cover}
              />
...
            inactiveDotOpacity={0.4}
            inactiveDotScale={0.8}
          />

          <View style={$propertyInfoContainer}>
            <View>
              <Text testID="listing-title" text={document?.name} preset="subheading" style={$propertyNameLabel} />
              <View style={$tagContainer}>
                <ListingTag
                  label={`${document?.avaliableBedroom} Bedroom`}
                  icon={<Ionicons name="ios-bed" size={16} color={colors.gray100} />}
                />

...
