...
        <Controller
          control={control}
          rules={{
            required: true,
          }}
          render={({ field: { onChange, value } }) => (
            <PropertyField testID="listing-name" label="Give your listing a title*" value={value} onChange={onChange} />
          )}
          name="name"
        />

        <Pressable
          onPress={() => navigate("AutoComplete", { type: "city" })}
...
